<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#505050"
    android:textColor="#FFFFFF"
    tools:context="com.example.android.justlikethemovies.MainActivity">



    <ScrollView
        android:id="@+id/sv_movie_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="1dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:id="@+id/tv_loading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:textSize="18sp"
                android:padding="8dp"
                android:textColor="#FFFFFF"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                />

            <ProgressBar
                android:id="@+id/pb_loading_indicator"
                android:layout_height="42dp"
                android:layout_width="42dp"
                android:layout_gravity="center"
                android:visibility="gone" />


            <ImageView
                android:id="@+id/iv_error"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_action_name"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:visibility="gone"/>


            <TextView
                android:id="@+id/network_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/network_error"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:padding="8dp"
                android:textAlignment="center"
                android:layout_margin="4dp"
                android:visibility="gone"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:background="#FFFFFF"
                android:padding="2dp"/>

            <TextView
                android:id="@+id/tmdb_disclaimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="2dp"
                android:textSize="15sp"
                android:textColor="#FFFFFF"
                android:text="@string/tmdb_disclaimer"
                android:visibility="visible"/>

            <ImageView
                android:id="@+id/tmdb_logo"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_gravity="center"
                android:cropToPadding="false"
                android:src="@drawable/tmdb_logo_sq"
                android:visibility="visible"/>

        </LinearLayout>

    </ScrollView>




</LinearLayout>
